[package]
name = "fieldmask"
description = "(de)serializing/applying fieldmask"
version = "0.0.5"
repository = "https://github.com/weiwei-lin/fieldmask-rs"
authors = ["Weiwei Lin <weiwei.will.lin@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
prost = ["dep:prost", "fieldmask_derive/prost"]

[dependencies]
derive_more = "0.99.17"
fieldmask_derive = { version = "0.0.5", path = "../fieldmask_derive" }
prost = { version = "0.13", optional = true }
textwrap = "0.16.1"
thiserror = "1.0.40"
