cargo-features = ["edition2024"]

[package]
name = "fieldmask"
description = "(de)serializing/applying fieldmask"
version = "0.0.5"
repository = "https://github.com/weiwei-lin/fieldmask-rs"
authors = ["Weiwei Lin <weiwei.will.lin@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
prost = ["dep:prost", "fieldmask_derive/prost"]

[dependencies]
derive_more = { version = "2.0.1", features = [ "deref", "deref_mut" ] }
fieldmask_derive = { version = "0.0.5", path = "../fieldmask_derive" }
prost = { version = "0.13.5", optional = true }
textwrap = "0.16.2"
thiserror = "2.0.12"
