[package]
name = "fieldmask_derive"
version = "0.0.1"
authors = ["Weiwei Lin <weiwei.will.lin@gmail.com>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
proc-macro = true

[features]
prost = []

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = "1.0.54"
