[package]
name = "fieldmask_derive"
description = "derive macros for the fieldmask crate"
version = "0.0.4"
repository = "https://github.com/weiwei-lin/fieldmask-rs"
authors = ["Weiwei Lin <weiwei.will.lin@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
proc-macro = true

[features]
prost = []

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = { version = "1.0.109", features = [ "extra-traits" ]}
